[package]
name = "rust_leetcode"
version = "0.0.1"
authors = ["吴翱翔 <pylint@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_leetcode"

[dependencies]
#serde = { version = "*", features = ["derive"] }
