[package]
name = "leetcode-rust"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/pymongo/leetcode-rust/"
keywords = ["leetcode", "codeforce"]
categories = ["algorithm"]
description = "leetcode/codeforce Rust solutions"

[features]
rustc_private = []
default = []
# default = ["rustc_private"]
# [package.metadata.rust-analyzer]
# rustc_private = true
